Final polishes on cards, text overflow fixed, fixed spacing between rows, and updated project descriptions

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,9 @@ body {
 a {
     color: gray;
 }
+a:hover {
+    color: black;
+}
 .center {
     text-align: center;
 }
@@ -66,36 +69,13 @@ a {
 }
 .footer,
 .push {
-    height: 20px;
+    height: 60px;
+    bottom: 0;
+    position: absolute;
 }
 img {
-    opacity: 0.15;
-    filter: alpha(opacity=20);
+    opacity: 0.2;
 }
 img:hover {
     opacity: 1.0;
-    filter: alpha(opacity=100);
-}
-@media (min-width: 768px) {
-    [class*="top-spacing"] {
-        margin-top: 25px;
-    }
-}
-@media (max-width: 768px) {
-    [class* "top-spacing"] {
-        margin-top: 20px;
-    }
-}
-@media (max-width: 768px) {
-    [class*="col-xs-"] {
-        margin-bottom: 15px;
-    }
-}
-.fa-linkedin-square: {
-    color: blue;
-}
-
-.card-stock: {
-    width: 100px;
-    height: 100px;
 }
